--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -29,7 +29,7 @@
      
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Organization</p>
-            <div class=" d-flex align-items-center text-white px-3 gap-1"
+            <div routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/user-alt.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Management</p>
