--- a/src/app/admin/user/add-user/add-user.component.html
+++ b/src/app/admin/user/add-user/add-user.component.html
@@ -1,1 +1,30 @@
-<p>add-user works!</p>
+<div class="row border border-1 shadow p-3 mb-5 bg-body rounded">
+    <div class="col-12">
+        <h3 class="text-center text-black pb-4">
+            Enter User Details
+        </h3>
+        <div class="d-flex align-items-center justify-content-center">
+            <form [formGroup]="userForm" action="" class=" row gy-2 text-black">
+                <div class="d-flex flex-column col-6">
+                    <label for="">Enter Name</label>
+                    <input formControlName="name" type="text" name="" id="">
+                </div>
+                <div class="d-flex flex-column col-6">
+                    <label for="">Enter UserName</label>
+                    <input formControlName="username" type="text" name="" id="">
+                </div>
+                <div class="d-flex flex-column col-6">
+                    <label for="">Salary</label>
+                    <input formControlName="salary" type="text" name="" id="">
+                </div>
+                <div class="d-flex flex-column col-6">
+                    <label for="">Enter Email</label>
+                    <input formControlName="email" type="text" name="" id="">
+                </div> 
+                <div class="col-12 pb-4">
+                    <button class="button" class="btn btn-primary" (click)="onAdd()">Add</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
