--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -1,1 +1,26 @@
-<p>user-list works!</p>
+<table class="table table-success  table-hover">
+    <thead>
+      <tr>
+        <th scope="col">S.No</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Username</th>
+        <th scope="col">Salary</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of userList" >
+        <td>{{item.id}}</td>
+        <td>{{item.name | uppercase}}</td>
+        <td>{{item.email | lowercase}}</td>
+        <td>{{item.username | lowercase}}</td>
+        <td>{{item.salary | currency: 'USD'}}</td>
+        <td >
+            <button type="button" class="btn btn-primary">Edit</button>
+            <button type="button" class="btn btn-danger ms-2">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
