--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -1,1 +1,26 @@
-<p>user works!</p>
+<div>
+    <div class="text-black d-flex align-items-center gap-1 fs-4 mt-4">
+        <i class='bx bxs-user'></i>
+        <p class="m-0">User Management</p>
+    </div>
+    <div class="dashboardSlider ">
+        <div routerLink="add-user"
+            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3 shadow-lg p-3 mb-5 rounded"
+            style="background-color: #FFC20E;">
+            <span>Add User</span>
+        </div>
+        <div routerLink="edit-user"
+            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3"
+            style="background-color: #253D90;">
+            <span>Edit User</span>
+        </div>
+        <div routerLink="user-list"
+            class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3"
+            style="background-color: #3F861E;">
+            <span>User List</span>
+        </div>
+    </div>
+</div>
+
+
+<router-outlet></router-outlet>
