--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,7 +6,7 @@
                 <div class="adminProfile">
                     <img src="/img/dp 1.png" alt="">
                 </div>
-                <div>
+                <div >
                     <h1 style="font-size: 1rem;">Jatin Admin</h1>
                     <p style="font-size: 12px;">admin</p>
                 </div>
@@ -15,12 +15,12 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Features</p>
-            <div routerLink="dashboard" class="mt-1  d-flex align-items-center  px-3 gap-1"
+            <div appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center  px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
-                <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" style="filter: invert(1);" alt="">
+                <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" alt="" style="filter: invert(1);">
                 <p  style="font-size: 14px;">Dashboard</p>
             </div>
-            <div class=" d-flex align-items-center text-white px-3 gap-1"
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/Vector (2).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Message</p>
@@ -29,17 +29,17 @@
      
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Organization</p>
-            <div routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1"
+            <div appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/user-alt.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Management</p>
             </div>
-            <div class=" d-flex align-items-center text-white px-3  gap-1"
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/book-open.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Leave Management</p>
             </div>
-            <div class=" d-flex align-items-center text-white px-3 gap-1"
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/Vector.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Performance Management</p>
@@ -47,27 +47,26 @@
         </div>
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Recruitment</p>
-            <div class="d-flex align-items-center text-white px-3 gap-1"
+            <div appHoverEffect class="d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/Vector (3).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Jobs</p>
             </div>
-            <div class=" d-flex align-items-center text-white px-3  gap-1"
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/Vector (4).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Candidates</p>
             </div>
-            <div class=" d-flex align-items-center text-white px-3 gap-1"
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Resumes</p>
             </div>
         </div>
-        <div class="mt-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded">
+        <div  class="mt-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded">
             <img src="/dashboardIcon/Vector (7).png" width="15px" height="15px" alt="">
             <p>Log Out</p>
-        </div>
-      
+        </div>  
     </div>
     
     <div class="rightSection px-4">
