--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -40,10 +40,10 @@ body{
             }
         }
 
-        .dashboard>div:hover {
-            background-color: #FFC20E;
-            color: black !important;
-        }
+        // .dashboard>div:hover {
+        //     background-color: #FFC20E;
+        //     color: black !important;
+        // }
     }
 
     .rightSection {
