--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -9,11 +9,11 @@
             style="background-color: #FFC20E;">
             <span>Add User</span>
         </div>
-        <div routerLink="edit-user"
+        <!-- <div routerLink="edit-user"
             class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3"
             style="background-color: #253D90;">
             <span>Edit User</span>
-        </div>
+        </div> -->
         <div routerLink="user-list"
             class="dashboardCard d-flex align-items-center justify-content-center text-white gap-3"
             style="background-color: #3F861E;">
