--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex adminDashboard">
-    <div  class=" container sidebarSection">
+    <div [class.hidden]="isSidebar" class="sidebarSection">
         <div class="sidebarHeader">
             <img src="/img/loginLogo.png" width="60%" height="50px" alt="">
             <div class="d-flex align-items-center gap-3 mt-3">
@@ -15,7 +15,7 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Features</p>
-            <div appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center  px-3 gap-1"
+            <div appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1"
                 style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
                 <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" alt="" style="filter: invert(1);">
                 <p  style="font-size: 14px;">Dashboard</p>
@@ -63,15 +63,15 @@
                 <p style="font-size: 14px;">Resumes</p>
             </div>
         </div>
-        <div  class="mt-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded">
+        <div (click)="onLogout()" class="mt-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded btn ">
             <img src="/dashboardIcon/Vector (7).png" width="15px" height="15px" alt="">
             <p>Log Out</p>
         </div>  
     </div>
     
-    <div class="rightSection px-4">
+    <div class="container rightSection px-4" [class.full-width]="isSidebar">
         <nav class="d-flex justify-content-between align-items-center pt-4">
-            <div  class="menuIcon d-flex align-items-center">
+            <div (click)="onSidebarClick()" class="menuIcon d-flex align-items-center">
                 <img src="/dashboardIcon/Group 47.svg" width="30px" height="30px" alt="">
             </div>
             <div class="navserach  d-flex align-items-center">
