--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -17,8 +17,8 @@
         <td>{{item.username | lowercase}}</td>
         <td>{{item.salary | currency: 'USD'}}</td>
         <td >
-            <button type="button" class="btn btn-primary">Edit</button>
-            <button type="button" class="btn btn-danger ms-2">Delete</button>
+            <button type="button" (click)="onEdit(item.id)" class="btn btn-primary">Edit</button>
+            <button type="button" (click)="onDelete(item.id)" class="btn btn-danger ms-2">Delete</button>
         </td>
       </tr>
     </tbody>
