--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,12 +1,12 @@
-<div class="d-flex adminDashboard">
-    <div [class.hidden]="isSidebar" class="sidebarSection">
+<div class="adminDashboard d-flex">
+    <div *ngIf="isSidebar" class="sidebarSection">
         <div class="sidebarHeader">
             <img src="/img/loginLogo.png" width="60%" height="50px" alt="">
             <div class="d-flex align-items-center gap-3 mt-3">
                 <div class="adminProfile">
                     <img src="/img/dp 1.png" alt="">
                 </div>
-                <div >
+                <div>
                     <h1 style="font-size: 1rem;">Jatin Admin</h1>
                     <p style="font-size: 12px;">admin</p>
                 </div>
@@ -15,61 +15,51 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Features</p>
-            <div appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" alt="" style="filter: invert(1);">
-                <p  style="font-size: 14px;">Dashboard</p>
+                <p style="font-size: 14px;">Dashboard</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
-                <img src="/dashboardIcon/Vector (2).png" width="20px" height="20px" alt="">
-                <p style="font-size: 14px;">Message</p>
-            </div>
+
         </div>
-     
+
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Organization</p>
-            <div appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/user-alt.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Management</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div routerLink="leave-management" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/book-open.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Leave Management</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Performance Management</p>
             </div>
         </div>
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Recruitment</p>
-            <div appHoverEffect class="d-flex align-items-center text-white px-3 gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div appHoverEffect class="d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (3).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Jobs</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/Vector (4).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Candidates</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1"
-                style="height: 40px; width: 240px; border-radius: 10px; cursor: pointer;">
+            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Resumes</p>
             </div>
         </div>
-        <div (click)="onLogout()" class="mt-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded btn ">
+        <div (click)="onLogout()"
+            class="mt-3 me-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded btn ">
             <img src="/dashboardIcon/Vector (7).png" width="15px" height="15px" alt="">
             <p>Log Out</p>
-        </div>  
+        </div>
     </div>
-    
-    <div class="container rightSection px-4" [class.full-width]="isSidebar">
+
+    <div class="container rightSection px-4">
         <nav class="d-flex justify-content-between align-items-center pt-4">
             <div (click)="onSidebarClick()" class="menuIcon d-flex align-items-center">
                 <img src="/dashboardIcon/Group 47.svg" width="30px" height="30px" alt="">
@@ -91,6 +81,6 @@
                 </div>
             </div>
         </nav>
-        <router-outlet/>
+        <router-outlet />
     </div>
 </div>
