--- a/src/app/admin/user/add-user/add-user.component.html
+++ b/src/app/admin/user/add-user/add-user.component.html
@@ -1,33 +1,112 @@
-<div class="row border border-1 shadow p-3 mb-5 bg-body rounded">
+<app-alert *ngIf="isAdd" [popupType]="'add'" (closePopup)="closePopupHere($event)"></app-alert>
+<app-alert *ngIf="isUpdate" [popupType]="'edit'" (closePopup)="closePopupHere($event)"></app-alert>
+<div class="row border border-1 shadow-lg py-2">
     <div class="col-12">
         <h3 class="text-center text-black pb-4">
             Enter User Details
         </h3>
-        <div class="d-flex align-items-center justify-content-center">
-            <form [formGroup]="userForm" action="" class=" row gy-2 text-black">
-                <div class="d-flex flex-column col-6">
-                    <label for="">Enter Name</label>
-                    <input formControlName="name" type="text" name="name" id="">
-                </div>
-                <div class="d-flex flex-column col-6">
-                    <label for="">Enter UserName</label>
-                    <input formControlName="username" type="text" name="username" id="">
-                </div>
-                <div class="d-flex flex-column col-6">
-                    <label for="">Salary</label>
-                    <input formControlName="salary" type="text" name="salary" id="">
-                </div>
-                <div class="d-flex flex-column col-6">
-                    <label for="">Enter Email</label>
-                    <input formControlName="email" type="text" name="email" id="">
-                </div> 
-               
-                <div class="col-12 pb-4">
-                    <button *ngIf="currentId ===0" class="button" class="btn btn-primary" (click)="onAdd()">Add</button>
-                    <button *ngIf="currentId !==0" class="button" class="btn btn-warning" (click)="onUpdate()">Update</button>
+        <div class="d-flex align-items-center justify-content-center text-black">
 
+            <form [formGroup]="userForm" novalidate class="row g-3">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Name</label>
+                    <input formControlName="name" type="text" class="form-control" id="inputEmail4">
+                    <div class="text-danger">
+                        @if(userForm.controls['name'].touched && userForm.controls['name'].errors?.['required']){
+                        <span>This field is required</span>
+                        }
+                        @else if (userForm.controls['name'].errors?.['minlength']) {
+                        <span>Min 3 length is required</span>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Username</label>
+                    <input formControlName="username" type="text" class="form-control">
+                    <div class="text-danger">
+                        @if(userForm.controls['username'].touched &&
+                        userForm.controls['username'].errors?.['required']){
+                        <span>This field is required</span>
+                        }
+                        @else if (userForm.controls['username'].errors?.['minlength']) {
+                        <span>Min 3 length is required</span>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Email</label>
+                    <input formControlName="email" type="email" class="form-control" id="inputEmail4" placeholder="">
+                    <div class="text-danger">
+                        @if(userForm.controls['email'].touched &&
+                        userForm.controls['email'].errors?.['required']){
+                        <span>This field is required</span>
+                        }
+                        @else if (userForm.controls['email'].errors?.['email']) {
+                        <span>enter valid email</span>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputAddress2" class="form-label">Salary</label>
+                    <input formControlName="salary" type="number" class="form-control" id="inputAddress2"
+                        placeholder="">
+                        <div class="text-danger">
+                            @if(userForm.controls['salary'].touched &&
+                            userForm.controls['salary'].errors?.['required']){
+                            <span>This field is required</span>
+                            }
+                            @else if (userForm.controls['salary'].errors?.['minlength']) {
+                            <span>Minimum 3 digit required</span>
+                            }
+                        </div>
+                </div>
+                <div class="col-12">
+                    <button [disabled]="userForm.invalid" *ngIf="currentId ===0" class="button" class="btn btn-primary" (click)="onAdd()">Add</button>
+                    <button *ngIf="currentId !==0" class="button" class="btn btn-warning"
+                        (click)="onUpdate()">Update</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
+
+
+
+
+<!-- Add Modal -->
+<!-- <div *ngIf="is_add_modal" class="modal fade show" id="staticBackdrop" data-bs-backdrop="static" style="display: block;"
+    data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5 text-black" id="staticBackdropLabel">Data Saved Successfully</h1>
+
+            </div>
+
+            <div class="modal-footer">
+                <button (click)="add_closeModal()" type="button" class="btn btn-success"
+                    data-bs-dismiss="modal">Okay</button>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+
+
+<!-- update modal -->
+<!-- <div *ngIf="is_add_modal" class="modal fade show" id="staticBackdrop" data-bs-backdrop="static" style="display: block;"
+    data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5 text-black" id="staticBackdropLabel">Data updated Successfully</h1>
+
+            </div>
+
+            <div class="modal-footer">
+                <button (click)="add_closeModal()" routerLink="/admin/user/user-list" type="button"
+                    class="btn btn-success" data-bs-dismiss="modal">Okay</button>
+            </div>
+        </div>
+    </div>
+</div> -->
