--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 .dashboardSection {
     .dashboardSlider {
         display: flex;
+        justify-content: space-around;
         overflow-x: auto;
         max-width: 100%;
         gap: 15px;
