--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,8 @@
 <div class="adminDashboard d-flex ">
-    <div *ngIf="isSidebar" class="sidebarSection">
+    <div  class="sidebarSection" [ngClass]="{'active': sidebarOpen}">
         <div class="sidebarHeader">
             <img src="/img/loginLogo.png" width="60%" height="50px" alt="">
+            <div (click)="toggleSidebar()" class="sidebarClose"><i class='bx bx-left-arrow-circle fs-1' ></i></div>
             <div class="d-flex align-items-center gap-3 mt-3">
                 <div class="adminProfile">
                     <img src="/img/dp 1.png" alt="">
@@ -15,7 +16,7 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Features</p>
-            <div appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
+            <div  appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" alt="" style="filter: invert(1);">
                 <p style="font-size: 14px;">Dashboard</p>
             </div>
@@ -24,15 +25,15 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Organization</p>
-            <div appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
+            <div  appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/user-alt.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Management</p>
             </div>
-            <div routerLink="leave-management" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+            <div  routerLink="leave-management" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/book-open.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Leave Management</p>
             </div>
-            <div routerLink="emp-department"  (click)="onAccordion()" appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1" data-toggle="collapse" data-target="#demo">
+            <div  routerLink="emp-department"  (click)="onAccordion()" appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1" data-toggle="collapse" data-target="#demo">
                 <img src="/dashboardIcon/Vector.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Department</p>
             </div>
@@ -44,15 +45,15 @@
         </div>
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Recruitment</p>
-            <div appHoverEffect class="d-flex align-items-center text-white px-3 gap-1">
+            <div  appHoverEffect class="d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (3).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Jobs</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+            <div  appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
                 <img src="/dashboardIcon/Vector (4).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Candidates</p>
             </div>
-            <div appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
+            <div  appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Resumes</p>
             </div>
@@ -64,9 +65,9 @@
         </div>
     </div>
 
-    <div class="rightSection px-4">
+    <div class="rightSection px-4" >
         <nav class="d-flex justify-content-between align-items-center pt-4">
-            <div (click)="onSidebarClick()" class="menuIcon d-flex align-items-center">
+            <div (click)="toggleSidebar()" class="menuIcon d-flex align-items-center">
                 <img src="/dashboardIcon/Group 47.svg" width="30px" height="30px" alt="">
             </div>
             <div class="navserach  d-flex align-items-center">
