--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -1,47 +1,49 @@
 
-<table class="table table-success  table-hover">
-  <thead>
-    <tr>
-      <th scope="col">S.No</th>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Username</th>
-      <th scope="col">Salary</th>
-      <th scope="col">Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    
-      @for (item of userList; track $index) {
-        <tr>
-        <td>{{$index+1}}</td>
-      <td>{{item.name | uppercase}}</td>
-      <td>{{item.email | lowercase}}</td>
-      <td>{{item.username | lowercase}}</td>
-      <td>{{item.salary | currency: 'USD'}}</td>
-      <td>
-        <button type="button" (click)="onView(item.id)" class="btn btn-info ">View</button>
-        <button type="button" (click)="onEdit(item.id)" class="btn btn-primary ms-2">Edit</button>
-        <button type="button" (click)="onDelete(item.id)" class="btn btn-danger ms-2">Delete</button>
-      </td>
-    </tr>
-
-      }
-    <!-- <tr *ngFor="let item of userList">
-      <td>{{item.id}}</td>
-      <td>{{item.name | uppercase}}</td>
-      <td>{{item.email | lowercase}}</td>
-      <td>{{item.username | lowercase}}</td>
-      <td>{{item.salary | currency: 'USD'}}</td>
-      <td>
-        <button type="button" (click)="onView(item.id)" class="btn btn-info ">View</button>
-        <button type="button" (click)="onEdit(item.id)" class="btn btn-primary ms-2">Edit</button>
-        <button type="button" (click)="onDelete(item.id)" class="btn btn-danger ms-2">Delete</button>
-      </td>
-    </tr> -->
-  </tbody>
-</table>
-
+<div class="table_section">
+  <table class="table table-success  table-hover">
+    <thead>
+      <tr>
+        <th scope="col">S.No</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Username</th>
+        <th scope="col">Salary</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      
+        @for (item of userList; track $index) {
+          <tr>
+          <td>{{$index+1}}</td>
+        <td>{{item.name | uppercase}}</td>
+        <td>{{item.email | lowercase}}</td>
+        <td>{{item.username | lowercase}}</td>
+        <td>{{item.salary | currency: 'USD'}}</td>
+        <td>
+          <button type="button" (click)="onView(item.id)" class="btn btn-info ">View</button>
+          <button type="button" (click)="onEdit(item.id)" class="btn btn-primary ms-2">Edit</button>
+          <button type="button" (click)="onDelete(item.id)" class="btn btn-danger ms-2">Delete</button>
+        </td>
+      </tr>
+  
+        }
+      <!-- <tr *ngFor="let item of userList">
+        <td>{{item.id}}</td>
+        <td>{{item.name | uppercase}}</td>
+        <td>{{item.email | lowercase}}</td>
+        <td>{{item.username | lowercase}}</td>
+        <td>{{item.salary | currency: 'USD'}}</td>
+        <td>
+          <button type="button" (click)="onView(item.id)" class="btn btn-info ">View</button>
+          <button type="button" (click)="onEdit(item.id)" class="btn btn-primary ms-2">Edit</button>
+          <button type="button" (click)="onDelete(item.id)" class="btn btn-danger ms-2">Delete</button>
+        </td>
+      </tr> -->
+    </tbody>
+  </table>
+  
+</div>
 
 <!-- view page popup -->
 <div *ngIf=" isView" class="modal fade show" id="exampleModal" data-bs-backdrop="static" style="display: block;"
