--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
             <div class="pt-4">
                 <img src="" width="310px"  alt="">
             </div>
-            <button routerLink="/user-login" class="btn bg-success">User Login</button>
+            <!-- <button routerLink="/user-login" class="btn bg-success">User Login</button> -->
         </div>
         <div class="d-flex justify-content-center align-items-center mt-5 text-white flex-column">
             <div class="text-center">
