--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -23,7 +23,7 @@
             transform: scale(0.7);
         }
     }
-
+   
     /* Styling the scrollbar */
     .dashboardSlider::-webkit-scrollbar {
         width: 200px;
@@ -53,6 +53,11 @@
             margin-top: 10px;
             margin-right: 10px;
             background-color: white;
+            @media (max-width: 768) {
+                .card{
+                    min-width: calc(100% - 10px);
+                }
+             }
         }
     }
 
@@ -73,4 +78,11 @@
     .cardsDashboard::-webkit-scrollbar-thumb:hover {
         background: #0056b3;
     }
+    
+    @media (max-width: 992px) {
+        .cardsDashboard{
+            max-height: 100% !important;
+        }
+     }
+    
 }
