--- a/src/app/admin/leave-management/leave-management.component.scss
+++ b/src/app/admin/leave-management/leave-management.component.scss
@@ -2,3 +2,24 @@
     width: calc(50% - 20px);
     margin-top: 20px;
 }
+
+@media (min-width: 360px) and (max-width: 768px) {
+    .leave_table {
+      height: 100vh !important;
+      overflow-x: auto;
+      // -webkit-overflow-scrolling: touch;
+    }
+  
+    table {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  
+    th,
+    td {
+      white-space: nowrap;
+      /* Prevent text wrapping */
+    }
+  }
+  
