--- a/src/app/admin/user/user-list/user-list.component.scss
+++ b/src/app/admin/user/user-list/user-list.component.scss
@@ -1,23 +1,60 @@
+.table_section {
+  width: 100%;
+  overflow-x: auto;
+  margin-bottom: 20px;
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th,
+    td {
+      padding: 12px;
+      text-align: left;
+      border: 1px solid #ddd;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+  }
+}
 
 
+@media (min-width: 360px) and (max-width: 768px) {
+  .table_section {
+    height: 100vh !important;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 
+  table {
+    width: 100%;
+    display: block;
+  }
+
+  th,
+  td {
+    white-space: nowrap;
+    /* Prevent text wrapping */
+  }
+}
 
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 3;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 50px;
-  }
-  
-  .modal-content {
-    background-color: #fff;
-    margin: 5% auto 15% auto;
-    border: 1px solid #888;
-    width: 100%;
-  }
+  display: none;
+  position: fixed;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 50px;
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 100%;
+}
