--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
     <div  class="sidebarSection" [ngClass]="{'active': sidebarOpen}">
         <div class="sidebarHeader">
             <img src="/img/loginLogo.png" width="60%" height="50px" alt="">
-            <div (click)="toggleSidebar()" class="sidebarClose"><i class='bx bx-left-arrow-circle fs-1' ></i></div>
+            <div (click)="toggleSidebar()" class="sidebarClose"><i class='bx bx-left-arrow-circle fs-1'  style="cursor: pointer;"></i></div>
             <div class="d-flex align-items-center gap-3 mt-3">
                 <div class="adminProfile">
                     <img src="/img/dp 1.png" alt="">
@@ -16,7 +16,7 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Features</p>
-            <div  appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
+            <div ngClass="active" appHoverEffect routerLink="dashboard" class="mt-1  d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (1).png" width="20px" height="20px" alt="" style="filter: invert(1);">
                 <p style="font-size: 14px;">Dashboard</p>
             </div>
@@ -25,7 +25,7 @@
 
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Organization</p>
-            <div  appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
+            <div   appHoverEffect routerLink="user" class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/user-alt.png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Employee Management</p>
             </div>
@@ -41,7 +41,10 @@
                 <div style="cursor: pointer;" routerLink="emp-department/add-emp-depart" >Add Department</div>
                 <div style="cursor: pointer;" routerLink="emp-department/view-emp-depart">View Department</div>
             </div> -->
-            
+            <div  routerLink="project" appHoverEffect class=" d-flex align-items-center text-white px-3  gap-1">
+                <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
+                <p style="font-size: 14px;">Projects</p>
+            </div>
         </div>
         <div class="dashboard mt-2 ">
             <p style="font-size: 12px;">Recruitment</p>
@@ -53,13 +56,13 @@
                 <img src="/dashboardIcon/Vector (4).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Candidates</p>
             </div>
-            <div  appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
+            <!-- <div  appHoverEffect class=" d-flex align-items-center text-white px-3 gap-1">
                 <img src="/dashboardIcon/Vector (5).png" width="20px" height="20px" alt="">
                 <p style="font-size: 14px;">Resumes</p>
-            </div>
+            </div> -->
         </div>
         <div (click)="onLogout()"
-            class="mt-3 me-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded btn ">
+            class="mb-2 mt-3 me-3 d-flex align-items-center gap-1 bg-danger py-1 justify-content-center rounded btn ">
             <img src="/dashboardIcon/Vector (7).png" width="15px" height="15px" alt="">
             <p>Log Out</p>
         </div>
