--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -56,12 +56,13 @@ body {
             border-radius: 10px;
             padding-bottom: 2px;
             cursor: pointer;
-
             p {
                 font-size: 14px !important;
             }
         }
-
+        .dashboard>div.active{
+            background-color: #FFC20E;
+        }
         .dashboard>div img:hover {
             img {
                 filter: invert(-1);
