--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -19,8 +19,8 @@
         }
 
         .dashboardCard:hover {
-            font-size: 20px;
-            transform: scale(0.7);
+            font-size: 18px;
+            // transform: scale(0.7);
         }
     }
    
